--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "clientsideproject",
+  "Homepage": "adirt12.github.io/client-side-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,11 +13,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
